--- a/tdlbook-main/rmd/80-glossary.rmd
+++ b/tdlbook-main/rmd/80-glossary.rmd
@@ -4,38 +4,32 @@
 
 # 术语{#glossary}
 
-下表概括了本文用到的符号。
+**表1：集合相关的符号**
 
-|术语     |                                         描述 |
+|符号    |                                         描述 |
 |:------|:----------------------|
 | $S$  | 抽象实体组成的非空有限集  |
 | $P_{S}$ | 索引集    |
 | $\mathcal{P}(S)$ | 集合$S$的幂集    |
 | $(S,\mathcal{N})$ | 非空集$S$和领域拓扑（neighborhood topology）$\mathcal{N}$构成的拓扑空间（Topological space）|
 | $\mathcal{N}_{a}(x)$   |胞腔（cell）$x$的邻接集（Adjacency set）         |
-| $\mathcal{N}_{co}(x)$  | Coadjacency set of a cell 胞腔$x$的共邻接集（Coadjacency set） |
+| $\mathcal{N}_{co}(x)$  |胞腔$x$的共邻接集（Coadjacency set） |
 | $\mathcal{N}_{\{ G_1,\ldots,G_n\}}(x)$  | 由邻域矩阵（neighborhood matrices）$\{G_1,\dots,G_n\}$限定的 $x$的邻域  |
-| $\mathcal{N}_{\searrow}(x)$                                                                   | Set of down-incidence of a cell $x$                                                                                                                                          |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{N}_{\nearrow}(x)$                                                                   | Set of up-incidence of a cell $x$                                                                                                                                            |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{N}_{\searrow,k}(x)$                                                                 | Set of $k$-down incidence of a cell $x$                                                                                                                                      |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{N}_{\nearrow,k}(x)$                                                                 | Set of $k$-up incidence of a cell $x$                                                                                                                                        |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathbb{N}$ and $\mathbb{Z}_{\ge 0}$                                                         | Set of positive integers and non-negative integers, respectively                                                                                                             |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| <center>Domains</center>                                                                                                                                                                                                                                                     |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{G}$                                                                                 | Graph                                                                                                                                                                        |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $x^k$                                                                                         | Cell $x$ of rank $k$                                                                                                                                                         |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mbox{rk}$                                                                                   | Rank function                                                                                                                                                                |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $(S, \mathcal{X}, \mbox{rk})$                                                                 | CC, consisting of a set $S$, a subset $\mathcal{X}$ of $\mathcal{P}(S)\setminus\{\emptyset\}$, and a rank function $\mbox{rk}$                                               | 
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\dim (\mathcal{X})$                                                                          | Dimension of a CC $\mathcal{X}$                                                                                                                                              |
+| $\mathcal{N}_{\searrow}(x)$ | 胞腔$x$的下关联（down-incidence）集合 |
+| $\mathcal{N}_{\nearrow}(x)$ | 胞腔$x$的上关联（up-incidence）集合    |
+| $\mathcal{N}_{\searrow,k}(x)$ | 胞腔$x$的$k$下关联（$k$-down incidence）集合    |
+| $\mathcal{N}_{\nearrow,k}(x)$ | 胞腔$x$的$k$上关联（$k$-up incidence）集合  |
+| $\mathbb{N}$ 和 $\mathbb{Z}_{\ge 0}$  |分别为正整数和非负整数的集合 |
+
+**表2：域相关的符号**
+
+|符号    |                                         描述 |
+|:------|:----------------------|
+| $\mathcal{G}$   | 图  |
+| $x^k$ | 秩（rank）为$k$的胞腔$x$|
+| $\mbox{rk}$ | 秩函数（Rank function）|
+| $(S, \mathcal{X}, \mbox{rk})$ |由集合$S$、 $\mathcal{P}(S)\setminus\{\emptyset\}$的子集$\mathcal{X}$和秩函数$\mbox{rk}$组成的CC  | 
+| $\dim (\mathcal{X})$ | Dimension of a CC $\mathcal{X}$                                                                                                                                              |
 +-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | $\{c_\alpha\}_{\alpha \in I}$                                                                 | Partition into subspaces (cells) indexed by an index set $I$                                                                                                                 |
 +-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
