--- a/tdlbook-main/rmd/80-glossary.rmd
+++ b/tdlbook-main/rmd/80-glossary.rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 \cleardoublepage 
 
 # (APPENDIX) 附录 {-}
@@ -29,103 +34,65 @@
 | $x^k$ | 秩（rank）为$k$的胞腔$x$|
 | $\mbox{rk}$ | 秩函数（Rank function）|
 | $(S, \mathcal{X}, \mbox{rk})$ |由集合$S$、 $\mathcal{P}(S)\setminus\{\emptyset\}$的子集$\mathcal{X}$和秩函数$\mbox{rk}$组成的CC  | 
-| $\dim (\mathcal{X})$ | Dimension of a CC $\mathcal{X}$                                                                                                                                              |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\{c_\alpha\}_{\alpha \in I}$                                                                 | Partition into subspaces (cells) indexed by an index set $I$                                                                                                                 |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mbox{int}(x)$                                                                               | Interior of a cell $x$ in a regular cell complex                                                                                                                             |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $n_\alpha\in \mathbb{N}$                                                                      | Dimension of a cell in a regular cell complex                                                                                                                                |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $0$-cells                                                                                     | Vertices of a CC                                                                                                                                                             |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $1$-cells                                                                                     | Edges of a CC                                                                                                                                                                |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $k$-cells                                                                                     | Cells with rank $k$                                                                                                                                                          |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{X}^{(k)}$                                                                           | $k$-skeleton of $\mathcal{X}$, formed by $i$-cells in $\mathcal{X}$ with $i\leq k$                                                                                           |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{X}^k$                                                                               | Set of k-cells of $\mathcal{X}$                                                                                                                                              |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $|\mathcal{X}^k|$                                                                             | Cardinality of $\mathcal{X}^k$, that is number of $k$-cells of $\mathcal{X}$                                                                                                 |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{X}_{n-hop}(G)$                                                                      | $n$-hop CC of a graph $G$                                                                                                                                                    |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{X}_p(G)$                                                                            | Path-based CC of a graph $G$                                                                                                                                                 | 
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{X}_{loop}(G)$                                                                       | Loop-based CC of a graph $G$                                                                                                                                                 |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{X}_{SC}(\mathcal{Y})$                                                               | Coface CC of a simplicial complex/CC $\mathcal{Y}$                                                                                                                           |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| <center>Matrix notations</center>                                                                                                                                                                                                                                            |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $B_{r,k}$                                                                                     | Incidence matrices between $r$-cells and $k$-cells                                                                                                                           |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $A_{r,k}$                                                                                     | Adjacency matrices among the cells of $\mbox{X}^{r}$ with respect to the cells of $\mbox{X}^{k}$                                                                             |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $coA_{r,k}$                                                                                   | Coadjacency matrices among the cells of $\mbox{X}^{r}$ with respect to the cells of $\mbox{X}^{k}$                                                                           |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| <center>CCNNs</center>                                                                                                                                                                                                                                                       |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathbf{W}$                                                                                  | Trainable parameter                                                                                                                                                          |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{C}^k(\mathcal{X},\mathbb{R}^d)$                                                     | $k$-cochain space with features in $\mathbb{R}^d$                                                                                                                            |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{C}^k$                                                                               | $k$-cochain space with features in some Euclidean space                                                                                                                      |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathbf{G}= \{G_1,\ldots,G_m\}$                                                              | Set of cochain maps $G_i$ defined on a complex                                                                                                                               |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{M}_{ \mathbf{G};\mathbf{W}}$                                                        | Merge node                                                                                                                                                                   |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $G:C^{s}(\mathcal{X})\to C^{t}(\mathcal{X})$                                                  | Cochain map                                                                                                                                                                  |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $(\mathbf{x}_{i_1},\ldots, \mathbf{x}_{i_m})$                                                 | Vector of cochains                                                                                                                                                           |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $att^{l}: C^{s}(\mathcal{X})\to C^{s}(\mathcal{X})$                                           | Higher-order attention matrix                                                                                                                                                |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{N}_{\mathcal{Y}_0}=\{\mathcal{Y}_1,\ldots,\sigma_{|\mathcal{N}_{\mathcal{Y}_0}|}\}$ | Set of a complex object in the vicinity of  $\mathcal{Y}_0$                                                                                                                  |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $a: {\mathcal{Y}_0}\times \mathcal{N}_{\mathcal{Y}_0}\to [0,1]$                               |  Higher-order attention function                                                                                                                                             |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mbox{CCNN}_{\mathbf{G};\mathbf{W}}$                                                         | CCNN or its tensor diagram representation                                                                                                                                    |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| $\mathcal{H}_{\mathcal{X}}= (V (\mathcal{H}_{\mathcal{X}}), E(\mathcal{H}_{\mathcal{X}}) )$   | Hasse graph with vertices $V (\mathcal{H}_{\mathcal{X}})$ and edges $E(\mathcal{H}_{\mathcal{X}})$; see Definition \@ref(def:hg)                                             |
-+-----------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| $\dim (\mathcal{X})$ | CC $\mathcal{X}的维度$   |
+| $\{c_\alpha\}_{\alpha \in I}$ | 由索引集$I$索引的子空间（胞腔）划分 |
+| $\mbox{int}(x)$ | 正则胞腔复形（regular cell complex）中胞腔$x$的内部区域 |
+| $n_\alpha\in \mathbb{N}$ | 正则胞腔复形的胞腔的维度        |
+| $0$-cells| CC 的顶点  |
+| $1$-cells | CC  的边   |
+| $k$-cells | 秩为$k$的胞腔  |
+| $\mathcal{X}^{(k)}$   | $\mathcal{X}$的$k$-骨架（skeleton）, 由$\mathcal{X}$上的$i$-cells构成， $i\leq k$  |
+| $\mathcal{X}^k$  | $\mathcal{X}$的$k$-cells集合  |
+| $|\mathcal{X}^k|$  | $\mathcal{X}^k$的基（Cardinality）, 即 $\mathcal{X}$的$k$-cells个数 |
+| $\mathcal{X}_{n-hop}(G)$ | 图$G$的$n$-hop CC|
+| $\mathcal{X}_p(G)$  | Path-based CC of a graph 图$G$上基于路径(path)的CC | 
+| $\mathcal{X}_{loop}(G)$ | Loop-based CC of a graph 图$G$上基于环（loop）的CC    |
+| $\mathcal{X}_{SC}(\mathcal{Y})$ | Coface CC of a 单纯复形（simplicial complex）/CC $\mathcal{Y}$的共面(Coface)CC |
 
-The table below summarizes the paper's acronyms.
+**表3. 矩阵相关的符号**
 
-+---------+----------------------------------------------------+
-| Acronym | Description                                        |
-+=========+====================================================+
-| AGD     | Average geodesic distance                          |
-+---------+----------------------------------------------------+
-| CC      | Combinatorial complex                              |
-+---------+----------------------------------------------------+
-| CCANN   | Combinatorial complex attention neural network     |
-+---------+----------------------------------------------------+
-| CCCNN   | Combinatorial complex convolutional neural network |
-+---------+----------------------------------------------------+
-| CCNN    | Combinatorial complex neural network               |
-+---------+----------------------------------------------------+
-| CNN     | Convolutional neural network                       |
-+---------+----------------------------------------------------+
-| DEC     | Discrete exterior calculus                         |
-+---------+----------------------------------------------------+
-| GDL     | Geometric deep learning                            |
-+---------+----------------------------------------------------+
-| GNN     | Graph neural network                               |
-+---------+----------------------------------------------------+
-| MOG     | Mapper on graphs                                   |
-+---------+----------------------------------------------------+
-| RNN     | Recurrent neural network                           |
-+---------+----------------------------------------------------+
-| SCoNe   | Simplicial complex network                         |
-+---------+----------------------------------------------------+
-| Sub-CC  | sub-combinatorial complex                          |
-+---------+----------------------------------------------------+
-|TDA      | Topological data analysis                          |
-+---------+----------------------------------------------------+
-| TDL     | Topological deep learning                          |
-+---------+----------------------------------------------------+
-| TQFT    | Topological quantum field theory                   |
-+---------+----------------------------------------------------+
+|符号    |                                         描述 |
+|:------|:----------------------|
+| $B_{r,k}$  | $r$-cells 和 $k$-cells之间的关联矩阵 （ Incidence matrices）           |
+| $A_{r,k}$  | $\mbox{X}^{r}$的胞腔关于$\mbox{X}^{k}$的胞腔之间的邻接矩阵（Adjacency matrices）|
+| $coA_{r,k}$  | $\mbox{X}^{r}$的胞腔关于$\mbox{X}^{k}$的胞腔之间的共邻矩阵（Coadjacency matrices） |
+
+**表4：CCNNs相关的符号**
+
+|符号    |                                         描述 |
+|:------|:----------------------|
+| $\mathbf{W}$   | 可训练参数 |
+| $\mathcal{C}^k(\mathcal{X},\mathbb{R}^d)$   |$\mathbb{R}^d$ 上带特征属性的$k$-共链空间（ $k$-cochain space ）|
+| $\mathcal{C}^k$  | 欧式空间上带特征属性的$k$-cochain space|
+| $\mathbf{G}= \{G_1,\ldots,G_m\}$  | 定义在复形上的共链映射$G_i$的集合   |
+| $\mathcal{M}_{ \mathbf{G};\mathbf{W}}$  | 聚合节点（Merge node） |
+| $G:C^{s}(\mathcal{X})\to C^{t}(\mathcal{X})$ | 共链映射（Cochain map）  |
+| $(\mathbf{x}_{i_1},\ldots, \mathbf{x}_{i_m})$ |共链的向量形式  |
+| $att^{l}: C^{s}(\mathcal{X})\to C^{s}(\mathcal{X})$ | 高阶注意力矩阵  |
+| $\mathcal{N}_{\mathcal{Y}_0}=\{\mathcal{Y}_1,\ldots,\sigma_{|\mathcal{N}_{\mathcal{Y}_0}|}\}$ | Set of a complex object in the vicinity of  $\mathcal{Y}_0$的近邻（vicinity）中复形对象的集合   |
+| $a: {\mathcal{Y}_0}\times \mathcal{N}_{\mathcal{Y}_0}\to [0,1]$ |  高阶注意力函数  |
+| $\mbox{CCNN}_{\mathbf{G};\mathbf{W}}$  | CCNN或它的张量图表示（ tensor diagram representation ）     |
+| $\mathcal{H}_{\mathcal{X}}= (V (\mathcal{H}_{\mathcal{X}}), E(\mathcal{H}_{\mathcal{X}}) )$   |  Hasse 图，顶点为$V (\mathcal{H}_{\mathcal{X}})$ ，边为$E(\mathcal{H}_{\mathcal{X}})$; 参加定义 \@ref(def:hg)  |
+
+
+**表4.文中用到的缩写** 
+
+| 缩写 | 全称                                        |
+|:------|:----------------------|
+| AGD     | 平均测地距离，Average geodesic distance  |
+| CC      | 组合复形，Combinatorial complex                              |
+| CCANN   | 组合复形注意力神经网络，Combinatorial complex attention neural network     |
+| CCCNN   | 组合复形卷积神经网络，Combinatorial complex convolutional neural network |
+| CCNN    | 组合复形神经网络，Combinatorial complex neural network               |
+| CNN     | 卷积神经网络，Convolutional neural network                       |
+| DEC     | 离散外微积分，Discrete exterior calculus                         |
+| GDL     | 集合深度学习，Geometric deep learning                            |
+| GNN     | 图神经网络，Graph neural network                               |
+| MOG     | 图上的Mapper，Mapper on graphs                                   |
+| RNN     | 递归神经网络，Recurrent neural network                           |
+| SCoNe   | 单纯复形网络，Simplicial complex network                         |
+| Sub-CC  | 子组合复形，sub-combinatorial complex                          |
+|TDA      | 拓扑数据分析，Topological data analysis                          |
+| TDL     | 拓扑深度学习，Topological deep learning                          |
+| TQFT    | 拓扑量子场论，Topological quantum field theory                   |
+
