--- a/tdlbook-main/rmd/81-lifting-maps.rmd
+++ b/tdlbook-main/rmd/81-lifting-maps.rmd
@@ -1,16 +1,16 @@
 # 提升映射{#lifting-maps}
 
-Lifting refers to the process of mapping a featured domain to another featured domain via a well-defined procedure. This section shows how we can lift a given domain to a CC or cell complex. Such lifting is useful as it allows CCNNs to be applied to common topological domains, including graphs and cell/simplicial complexes. This section only scratches the surface, as there remain many lifting constructions to be explored. We refer the reader to [@ferri2018simplicial] for examples of lifting graphs to simplicial complexes.
+提升是指通过明确定义的程序将一个特征域映射到另一个特征域的过程。本节展示了我们如何将给定域提升到 CC 或胞腔复形。这种提升非常有用，因为它允许 CCNNs 应用于常见的拓扑域，包括图和胞腔/单纯复形。本节只是蜻蜓点水，还有很多提升结构有待探索。关于将图提升到单纯复形的例子，请读者参阅 [@ferri2018simplicial]。
 
-## n-hop CC of a graph
+## 图的n-hop CC{#n-hop-cc-of-a-graph}
 
-Let $\mathcal{G}=(V(\mathcal{G}),E(\mathcal{G}))$ be a graph and $n\geq 2$ an integer. The $n$*-hop CC* of $\mathcal{G}$, denoted by $\mbox{CC}_{n-\mbox{hop}}(\mathcal{G})$, is the CC whose $0$-cells, $1$-cells, and $n$-cells are the nodes of $\mathcal{G}$, edges of $\mathcal{G}$, and set nodes in $n$-hop neighborhoods of the nodes in $\mathcal{G}$, respectively. It is easy to verify that $\mbox{CC}_{n-\mbox{hop}}(\mathcal{G})$ is a CC of dimension $n$. Figure \@ref(fig:liftings)(a) visualizes the $1$-hop CC of a graph.
+令$\mathcal{G}=(V(\mathcal{G}),E(\mathcal{G}))$是图，$n\geq 2$是整数。 图$\mathcal{G}$的 $n$*-hop CC*记为$\mbox{CC}_{n-\mbox{hop}}(\mathcal{G})$是一个CC，其$0$-cells、$1$-cells和$n$-cells 分别是$\mathcal{G}$的顶点、边，以及$\mathcal{G}$的顶点的$n$-hop领域集。 很容易验证$\mbox{CC}_{n-\mbox{hop}}(\mathcal{G})$是维度为$n$的CC。图\@ref(fig:liftings)(a) 可视化了图$\mathcal{G}$的$1$-hop CC。
 
 ```{r liftings, echo=FALSE, fig.align="center", fig.cap="Examples of lifting domains to CCs and cell complexes. (a): The $1$-hop neighborhood of the red node can be considered as a 2-cell that we can augment to the graph. Adding such 2-cells to a graph yields a CC called the 1-hop neighborhood of the graph. (b): A path on a graph of length more than two can be considered as a 2-cell that we can augment to the graph. Adding such 2-cells to a graph yields a CC called a path-based CC of the graph. (c): A loop in a graph (i.e., a closed path with no repeating edges) can be considered as a 2-cell that we can augment to the graph. Adding such 2-cells to a graph yields a CC called a loop-based CC of the graph. (d): For every blue 2-cell of a simplicial complex, we introduce a green 3-cell obtained by considering the 1-coface of the 2-cell. Adding such 3-cells to a simplicial complex yields a CC of dimension three called the coface CC of the simplicial complex."}
 knitr::include_graphics('figures/lifting_maps.png', dpi=NA)
 ```
 
-## Path-based and subgraph-based CC of a graph
+## 图的基于路径和基于子图的CC{#path-based-and-subgraph-based-cc-of-a-graph}
 
 Let $\mathcal{G}=(V(\mathcal{G}),E(\mathcal{G}))$ be a graph. A natural CC structure on $\mathcal{G}$ considers paths of $\mathcal{G}$. We define a *path-based CC* of $\mathcal{G}$, denoted by $\mbox{CC}_p(\mathcal{G})$, to be a CC consisting of $0$-cells, $1$-cells and $2$-cells specified as follows. First, $\mathcal{X}^0$ and $\mathcal{X}^1$ in $\mbox{CC}_p(\mathcal{G})$ are the sets of nodes and edges of $\mathcal{G}$, respectively. We now explain how to construct a $2$-cell in $\mbox{CC}_p(\mathcal{G})$. Let $P$ be a path in $\mathcal{G}$ with length larger than or equal to two (i.e., with two or more edges). An element $x_P$ in $\mathcal{X}^2$ induced by $P$ is defined to be $x_P=\cup_{v\in P }\{v\}$. The set $\mathcal{X}^2$ in $\mbox{CC}_p(\mathcal{G})$ is a non-empty collection of elements $x_P$. It is easy to verify that $\mbox{CC}_p(\mathcal{G})$ is a CC with $\dim(\mbox{CC}_p(\mathcal{G}))=2$. Note that we may replace the path $P$ by a tree/subgraph of graph $\mathcal{G}$ and obtain a similar CC structure induced by the tree/subgraph of $\mathcal{G}$. Figure \@ref(fig:liftings)(b) shows an example of a path-based CC of a graph.
 
