--- a/tdlbook-main/rmd/81-lifting-maps.rmd
+++ b/tdlbook-main/rmd/81-lifting-maps.rmd
@@ -6,7 +6,7 @@
 
 令$\mathcal{G}=(V(\mathcal{G}),E(\mathcal{G}))$是图，$n\geq 2$是整数。 图$\mathcal{G}$的 $n$*-hop CC*记为$\mbox{CC}_{n-\mbox{hop}}(\mathcal{G})$是一个CC，其$0$-cells、$1$-cells和$n$-cells 分别是$\mathcal{G}$的顶点、边，以及$\mathcal{G}$的顶点的$n$-hop领域集。 很容易验证$\mbox{CC}_{n-\mbox{hop}}(\mathcal{G})$是维度为$n$的CC。图\@ref(fig:liftings)(a) 可视化了图$\mathcal{G}$的$1$-hop CC。
 
-```{r liftings, echo=FALSE, fig.align="center", fig.cap="Examples of lifting domains to CCs and cell complexes. (a): The $1$-hop neighborhood of the red node can be considered as a 2-cell that we can augment to the graph. Adding such 2-cells to a graph yields a CC called the 1-hop neighborhood of the graph. (b): A path on a graph of length more than two can be considered as a 2-cell that we can augment to the graph. Adding such 2-cells to a graph yields a CC called a path-based CC of the graph. (c): A loop in a graph (i.e., a closed path with no repeating edges) can be considered as a 2-cell that we can augment to the graph. Adding such 2-cells to a graph yields a CC called a loop-based CC of the graph. (d): For every blue 2-cell of a simplicial complex, we introduce a green 3-cell obtained by considering the 1-coface of the 2-cell. Adding such 3-cells to a simplicial complex yields a CC of dimension three called the coface CC of the simplicial complex."}
+```{r liftings, echo=FALSE, fig.align="center", fig.cap="将域提升到 CCs 和胞腔复形的示例。 (a): 红色节点的 1-hop邻域可视为一个 2-cell，可将其添加到图中。 将这样的 2-cells 添加到图中，可得到一个 称为图的 1-hop邻域的CC。 (b): A path on a graph of length more than two can be considered as a 2-cell that we can augment to the graph. Adding such 2-cells to a graph yields a CC called a path-based CC of the graph. (c): A loop in a graph (i.e., a closed path with no repeating edges) can be considered as a 2-cell that we can augment to the graph. Adding such 2-cells to a graph yields a CC called a loop-based CC of the graph. (d): For every blue 2-cell of a simplicial complex, we introduce a green 3-cell obtained by considering the 1-coface of the 2-cell. Adding such 3-cells to a simplicial complex yields a CC of dimension three called the coface CC of the simplicial complex."}
 knitr::include_graphics('figures/lifting_maps.png', dpi=NA)
 ```
 
